--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.14",
+    "@react-email/tailwind": "^0.0.14",
     "@types/node": "20.11.16",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
@@ -24,7 +26,7 @@
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.0",
     "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^0.16.0",
+    "resend": "^3.2.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
